Fixed navbar display issues on mobile

--- a/cssa-website-react/src/components/navbar-styling.css
+++ b/cssa-website-react/src/components/navbar-styling.css
@@ -6,8 +6,10 @@
     align-items: center;
     padding: 0 2em;
     box-shadow: 3px 3px #14283a;
-    z-index: 3;
-    position: relative;
+    z-index: 99;
+    position: absolute;
+    width: 100vw;
+    box-sizing: border-box;
 }
 .navbar-logo{
     flex: 1;
@@ -31,18 +33,12 @@
     justify-content: center;
     align-items: center;
 }
-.navbar-link  a{
+.navbar-link a{
     text-decoration: none;
     color: white;
 }
-.dropdown-menu > .navbar-link  a{
-    display: none;
-}
-.dropdown-menu > .navbar-link  a.ready{
-    display: inline;
-}
 .dropdown-menu {
-    display: none;
+    display: none;  /* Initially hidden */
     position: absolute;
     top: 8vh;
     right: 0;
@@ -68,7 +64,7 @@
     padding: 1rem;
     z-index: 99;
 }
-  
+
 .dropdown-button {
     display: none;
     background: none;
@@ -77,27 +73,26 @@
     color: white;
     cursor: pointer;
 }
+
+/* Adjust font size for large screens */
 @media only screen and (min-width: 1440px) {
     .navbar-link{
         font-size: 1.3em;
     }
 }
-@media (max-width: 730px) {
-    .navbar-links {
-      flex: 2;
-    }
-}
 
+/* Adjustments for smaller screen sizes */
 @media (max-width: 500px) {
     .navbar-links {
-      display: none;
+      display: none; /* Hide the regular links */
     }
   
     .dropdown-button {
-      display: block;
+      display: block; /* Show the hamburger menu button */
     }
-  
-    .dropdown-menu {
-      display: block;
+
+    .dropdown-menu.active {
+      display: block; /* Show the dropdown when active */
+      z-index: 99;
     }
 }
