--- a/cssa-website-react/src/pages/Blog/blog.css
+++ b/cssa-website-react/src/pages/Blog/blog.css
@@ -5,6 +5,7 @@
     display: flex;
     position: absolute;
     overflow: hidden;
+    top: 8vh;
 }
 .newsletter-container{
     height: 100%;
