--- a/cssa-website-react/src/pages/Minutes/minutes.css
+++ b/cssa-website-react/src/pages/Minutes/minutes.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     overflow: hidden;
     position: absolute;
+    top: 8vh;
 }
 .minutes-list{
     width: fit-content;
